@@ -1,6 +1,7 @@
 Version 2024.x
 - Changed: Google Firebase Cloud Messaging (FCM) alternative way to pass a Domoticz device ID through the extra field ('|Device=<devidx>')
 - Changed: dzVents, possible to pass a Domoticz device ID in notify() through the extra parameter
+- Implemented: YouLess, added Water meter
 
 Version 2024.7 (July 13th 2024)
 - Implemented: P1 Meter, Report, Header now also supports simple mode (No T1/T2/R1/R2 but just total)
